test/errors/valueAsTypeExpr.compopts
--detailed-errors # valueAsTypeExpr-detailed.good
--no-detailed-errors # valueAsTypeExpr-brief.good
